--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,14 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+
+    <p>Welcome to the Pig Latinizer!</p>
+    <p>Just enter a phrase below to be converted to Pig Latin!</p>
+
+    <form action="/piglatinize" method="post">
+      <p>Enter your phrase:<input type="text" name="user_phrase"></p>
+      <input type="submit" name="Submit">
+    </form>
+
   </body>
 </html>
