--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,9 +5,12 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-    <form method="POST" action="/">
+    <h1>Pig Latinizer!</h1>
 
+    <form method="POST" action="/pig">
+    <p>Enter your phrase: <input type="text" ></input>
+    <input type="submit">
+    <p>user_phrase:
    </form>
 
   </body>
