--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,10 +7,9 @@
   <body>
     <h1>Pig Latinizer!</h1>
 
-    <form method="POST" action="/pig">
-    <p>Enter your phrase: <input type="text" ></input>
+    <form method="POST" action="/piglatinize">
+    <p>Enter your phrase: <input type="text" name="user_phrase">
     <input type="submit">
-    <p>user_phrase:
    </form>
 
   </body>
