--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,10 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <form>
+    <form method= "POST" action= "/">
+      <h2>Enter your phrase:<input type = "text" name= "user_phrase"></h2>
+    </form>
   </body>
 </html>
