--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,10 +5,15 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer!</h1>
-    <form>
-    <form method= "POST" action= "/">
-      <h2>Enter your phrase:<input type = "text" name= "user_phrase"></h2>
+    <h1>Pig Latinizer</h1>
+
+    <p>Welcome to the Pig Latinizer!</p>
+    <p>Just enter a phrase below to be converted to Pig Latin!</p>
+
+    <form action="/piglatinize" method="post">
+      <p>Enter your phrase:<input type="text" name="user_phrase"></p>
+      <input type="submit" name="Submit">
     </form>
+
   </body>
 </html>
