--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+      <form method="post" action="/piglatinize">
+        <label for="">Enter your phrase: </label> <input type="text" name="user_phrase">
+        <br><br>
+        <input type="submit">
+      </form>
   </body>
 </html>
